--- a/hypr/autostart.conf
+++ b/hypr/autostart.conf
@@ -11,8 +11,8 @@ exec-once = gnome-keyring-daemon --start --components=secrets
 # Wallpaper daemon (must start before setting wallpaper)
 exec-once = swww-daemon
 
-# Set wallpaper with theme generation (waits for swww to be ready)
-exec-once = sleep 0.5 && ~/.config/hypr/scripts/wallpaper-theme.sh ~/Pictures/Wallpapers/beach-1.jpg
+# Set wallpaper with theme generation (auto-selects first available wallpaper)
+exec-once = sleep 0.5 && ~/.config/hypr/scripts/wallpaper-init.sh
 
 # ==========================================
 # BAR & UI
