--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,5 +1,10 @@
-preload = /home/grey/Pictures/Wallpapers/beach-1.jpg
+# Hyprpaper config - auto-generated paths
+# Note: swww is used as the primary wallpaper daemon
+# This file is kept for fallback/reference
 
-wallpaper = eDP-1,/home/grey/Pictures/Wallpapers/beach-1.jpg
-
+# Will be updated by first-run or wallpaper-theme.sh
 ipc = on
+
+# Uncomment and set after adding wallpapers:
+# preload = ~/Pictures/Wallpapers/default.jpg
+# wallpaper = ,~/Pictures/Wallpapers/default.jpg
