--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -4,7 +4,7 @@ general {
 
 background {
     monitor =
-    path = /home/grey/Pictures/Wallpapers/beach-1.jpg
+    path = screenshot
     blur_passes = 3
     blur_size = 8
 }
